--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -26,9 +26,11 @@ The **html** link leads to a web page that shows the R code used in the app.
 
 App name | html | raw 
 -------- | ---- | ---------
+Distributions      | [html](./app-01-distr.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-distr.Rmd)
 MLE      | [html](./app-01-mle.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-mle.Rmd)
 Bayesian, Beta prior      | [html](./app-01-beta-prior.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-beta-prior.Rmd)
 Bayesian, Normal prior      | [html](./app-01-normal-prior.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-normal-prior.Rmd)
+Bayesian, bimodal prior      | [html](./app-01-bimodal-prior.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-bimodal-prior.Rmd)
 Data cloning      | [html](./app-01-data-cloning.html) | [raw](https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/2015/montpellier/app-01-data-cloning.Rmd)
 
 
