--- a/courses/2015/montpellier/how-to-prepare.Rmd
+++ b/courses/2015/montpellier/how-to-prepare.Rmd
@@ -9,6 +9,7 @@ course:
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: How to
   previous: about-the-course
+  next: quickstart
 ---
 
 Please follow these steps and install necessary software onto your computer that you are going to use at the course. This way we can spend more time on talking about modeling.
