--- a/courses/2015/montpellier/about-the-course.Rmd
+++ b/courses/2015/montpellier/about-the-course.Rmd
@@ -8,6 +8,7 @@ course:
   location: Montpellier
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: About
+  previous: index
   next: how-to-prepare
 ---
 
