last one is apps

--- a/courses/2015/montpellier/notes-04-misc.Rmd
+++ b/courses/2015/montpellier/notes-04-misc.Rmd
@@ -11,6 +11,7 @@ course:
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: Misc
   previous: notes-03-pva
+  next: apps
 ---
 
 **FIXME**
