--- a/courses/2015/montpellier/index.Rmd
+++ b/courses/2015/montpellier/index.Rmd
@@ -27,6 +27,7 @@ clone or download the full website content from
 
 * [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
 * [What to do before the course]({{ site.baseurl }}/courses/2015/montpellier/how-to-prepare.html)
+* [R quickstart]({{ site.baseurl }}/courses/2015/montpellier/quickstart.html)
 * Lecture 1: Basics ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-01-basics.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-01-basics.html))
 * Lecture 2: Hierarchical models ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-02-hmods.html), [slides]({{ site.baseurl }}/courses/2015/montpellier/slides-02-hmods.html))
 * Lecture 3: Population viability analysis ([notes]({{ site.baseurl }}/courses/2015/montpellier/notes-03-pva.html), [notes]({{ site.baseurl }}/courses/2015/montpellier/slides-03-pva.html)) 
